fixed issue that would not allow employee creation if all employees were deleted due to how employeeElements clone. Added functionality to edit schedule notes/date/shifts and touched up html/css of hours calculator

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -5,5 +5,17 @@ html {
 .entireContainer {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    height: 700px;
+    width: 900px;
+    text-align: center;
+    margin: auto;
 }
 
+.weekday {
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    width: 13%;
+    margin: auto;
+}
