--- a/css/main.css
+++ b/css/main.css
@@ -29,34 +29,19 @@ NAV BAR (employee button/timeslip button/trash can icon)
 }
 
 
-.trashCan {
-    width: 100%;
-    margin-left: 2%;
-    border: 1px solid black;
-}
-
-.trashCan:hover {
-    background-color: darkgray;
-}
-
-.trashCan img {
-    height: 50px;
-    width: 50px;
-    padding-left: 35%;
-}
-
-.trashCan span {
-    position: relative;
-    width: 100%;
-}
-
 /*
 ADD EMPLOYEE BUTTON
 */
 
+.addEmployeeButton {
+    background-color: rgba(158, 228, 155, 0.8);
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
 .addEmployeeButton:hover {
     cursor: pointer;
-    background-color: darkgray;
+    background-color: rgba(94, 139, 93, 0.8);
 }
 
 /*
@@ -117,36 +102,6 @@ EMPLOYEE CONTAINER
     line-height: 1.8;
 }
 
-
-/*
-EMPLOYEE INFO CARD
-*/
-
-.employeeEditCard {
-    display: none;
-}
-
-.employeeEditCardActive {
-    background-color: rgba(243, 237, 125, 0.8);
-    height: 300px;
-    width: 100%;
-    padding-top: 5%;
-    display: block;
-}
-
-.employeeEditCardActive > div {
-    padding: 7%;
-}
-
-.employeeEditCardActive span {
-    float: left;
-    clear: both;
-}
-
-.employeeEditCardActive span + div {
-    float: right;
-}
-
 /*
 WORK WEEK (right side calendar)
 */
@@ -158,7 +113,7 @@ WORK WEEK (right side calendar)
 }
 
 /*
-SCHEDULE TABLE (all employee slots and hp1/hp2 headers, and delete trash can icon)
+SCHEDULE TABLE (all employee slots and hp1/hp2 headers, and dateOfWeek/extraInfo)
 */
 
 table * {
@@ -172,8 +127,23 @@ table * {
     font-weight: 500;
 }
 
-#extraInfo {
+.extraInfo {
     color: rgba(149, 21, 21, 0.8);
+}
+
+.extraInfo:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.dateOfWeek:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.shiftSlot:hover {
+    background-color: lightgray;
+    cursor: pointer;
 }
 
 .hp1, .hp1Left{
